# coco-ai

./: .env.example  .firebaserc  .gitignore  README.md  cloudbuild.yaml  config.sh  deploy.sh  firebase.json  firestore.indexes.json  firestore.rules  setup_infra.sh  storage.rules
app/: README.md  firebase.json  pubspec.yaml
app/lib/: firebase_options.dart  main.dart
app/lib/constants/: app_assets.dart  firebase_constants.dart
app/lib/models/: app_state.dart  app_state.freezed.dart  job.dart  job.freezed.dart  job.g.dart  signed_url_response.dart  signed_url_response.freezed.dart  signed_url_response.g.dart
app/lib/providers/: app_state_provider.dart  firebase_providers.dart
app/lib/screens/: auth_gate.dart  home_screen.dart  sign_in_screen.dart
app/lib/services/: auth_service.dart  storage_service.dart
backend/: .dockerignore  .env.example  Dockerfile  README.md  callback.py  config.py  dependencies.py  main.py  pyproject.toml
backend/agents/: base_processing_agent.py
backend/agents/explainer_agent/: agent.py  config.py  prompt.py
backend/agents/illustrator_agent/: agent.py  config.py  prompt.py
backend/agents/narrator_agent/: agent.py  config.py
backend/agents/result_writer_agent/: agent.py
backend/agents/transcriber_agent/: agent.py  config.py
backend/models/: agent_models.py
backend/services/: firestore_service.py  firestore_session_service.py  logging_service.py  session_service.py  storage_service.py
config/: dev.example.json
functions/: .gitignore  README.md  config.py  main.py  requirements.txt
(+1 files in other folders)
